Adicionado firebase ao projeto;

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "breeze",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://breeze.cavernatech.dev",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
